--- a/src/main/resources/com/example/mafiaclient/hello-view.fxml
+++ b/src/main/resources/com/example/mafiaclient/hello-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -13,8 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="820.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="820.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mafiaclient.HelloController">
     <top>
         <DialogPane prefHeight="75.0" prefWidth="784.0" BorderPane.alignment="CENTER">
             <header>
@@ -36,32 +36,6 @@
             </padding>
         </DialogPane>
     </top>
-    <right>
-        <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <content>
-                <VBox prefHeight="450.0" prefWidth="198.0">
-                    <children>
-                        <DialogPane prefHeight="54.0" prefWidth="198.0">
-                            <header>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
-                                    <font>
-                                        <Font name="Arial" size="15.0" />
-                                    </font>
-                                </Text>
-                            </header>
-                            <content>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User info (other player)">
-                                    <font>
-                                        <Font name="Arial" size="12.0" />
-                                    </font>
-                                </Text>
-                            </content>
-                        </DialogPane>
-                    </children>
-                </VBox>
-            </content>
-        </ScrollPane>
-    </right>
     <bottom>
         <DialogPane prefHeight="74.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <header>
@@ -104,10 +78,30 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="68.0" prefWidth="198.0">
                     <children>
-                        <TextArea prefHeight="78.0" prefWidth="371.0" promptText="enter message..." AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <TextArea fx:id="enterChatTextArea" onKeyPressed="#sendChat" prefHeight="78.0" prefWidth="371.0" promptText="enter message..." AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                     </children>
                 </AnchorPane>
             </items>
         </SplitPane>
     </center>
+   <right>
+      <SplitPane dividerPositions="0.8961675579322639" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <VBox fx:id="playersList" prefHeight="396.0" prefWidth="155.0" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Button fx:id="voteButton" mnemonicParsing="false" onMouseClicked="#testAddPlayer" text="Vote Unavalible" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </right>
 </BorderPane>
