--- a/src/main/resources/com/example/mafiaclient/hello-view.fxml
+++ b/src/main/resources/com/example/mafiaclient/hello-view.fxml
@@ -103,7 +103,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <Button fx:id="voteButton" mnemonicParsing="false" onMouseClicked="#testAddPlayer" text="Vote Unavalible" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="voteButton" mnemonicParsing="false" onMouseClicked="#startOrVote" text="Vote Unavalible" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 
                </children>
             </AnchorPane>
